News UAT/force-app/main/default/objects/Creative__c/Creative__c.object-meta.xml
<CustomObject>
    <label>Creative</label>
    <nameField>
        <label>Creative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>