News UAT/force-app/main/default/objects/Creative__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This is internal field used to get the merge field in Email templates</description>
    <formula>Product_Order__r.Order__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>