News UAT/force-app/main/default/objects/Creative__c/fields/Assigned_Fulfilment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Fulfilment_Owner__c</fullName>
    <formula>IF(Product_Order__r.Assigned_Fulfilment_Owner__c &lt;&gt; null , Product_Order__r.Assigned_Fulfilment_Owner__r.LastName &amp; &quot;, &quot; &amp; Product_Order__r.Assigned_Fulfilment_Owner__r.FirstName , &#39;&#39;)</formula>
    <label>Assigned Fulfilment Owner</label>
    <type>Text</type>
</CustomField>