News UAT/force-app/main/default/objects/Creative__c/fields/Campaign_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Email__c</fullName>
    <description>This is internal field used to get the merge field in Email templates</description>
    <formula>Product_Order__r.Order__r.Campaign_Manager_Email__c</formula>
    <label>Campaign Manager Email</label>
    <type>Text</type>
</CustomField>