News UAT/force-app/main/default/objects/Creative__c/fields/Campaign_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Phone__c</fullName>
    <description>This is internal field used to get the merge field in Email templates</description>
    <formula>Product_Order__r.Order__r.Campaign_Manager_Phone__c</formula>
    <label>Campaign Manager Phone</label>
    <type>Text</type>
</CustomField>