News UAT/force-app/main/default/objects/Creative__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <formula>Product_Order__r.Campaign_Status__c</formula>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>