News UAT/force-app/main/default/objects/Creative__c/fields/Client_Approved__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved__c</fullName>
    <label>Client Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>