News UAT/force-app/main/default/objects/Creative__c/fields/CM_QA_check__c.field-meta.xml
<CustomField>
    <fullName>CM_QA_check__c</fullName>
    <label>CM QA check passed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>