News UAT/force-app/main/default/objects/Creative__c/fields/Creative_Owner__c.field-meta.xml
<CustomField>
    <fullName>Creative_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creatives</relationshipName>
    <type>Lookup</type>
</CustomField>