News UAT/force-app/main/default/objects/Creative__c/fields/Creative_Source__c.field-meta.xml
<CustomField>
    <fullName>Creative_Source__c</fullName>
    <label>Creative Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premedia</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>