News UAT/force-app/main/default/objects/Creative__c/fields/Creative_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_URL__c</fullName>
    <label>Creative URL</label>
    <type>Url</type>
</CustomField>