News UAT/force-app/main/default/objects/Creative__c/fields/Creative_URL_Draft__c.field-meta.xml
<CustomField>
    <fullName>Creative_URL_Draft__c</fullName>
    <label>Creative URL Draft</label>
    <type>Url</type>
</CustomField>