News UAT/force-app/main/default/objects/Creative__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <description>This is internal field used to populate merge field in email templates</description>
    <formula>Product_Order__r.Order__r.Customer_Contact__r.FirstName &amp; &#39; &#39; &amp; Product_Order__r.Order__r.Customer_Contact__r.LastName</formula>
    <label>Customer Contact</label>
    <type>Text</type>
</CustomField>