News UAT/force-app/main/default/objects/Creative__c/fields/Days_since_CW__c.field-meta.xml
<CustomField>
    <fullName>Days_since_CW__c</fullName>
    <formula>Product_Order__r.Order__r.Day_s_on_Setup__c</formula>
    <label>Days since CW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>