News UAT/force-app/main/default/objects/Creative__c/fields/Go_live_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Go_live_in_Days__c</fullName>
    <formula>Product_Order__r.Order__r.Go_live_Days__c</formula>
    <label>Go-live in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>