News UAT/force-app/main/default/objects/Creative__c/fields/Orchestrator_Priority__c.field-meta.xml
<CustomField>
    <fullName>Orchestrator_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Orchestrator Priority</description>
    <inlineHelpText>Orchestrator Priority</inlineHelpText>
    <label>Orchestrator Priority</label>
    <type>Checkbox</type>
</CustomField>