News UAT/force-app/main/default/objects/Creative__c/fields/Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percentage__c</fullName>
    <label>Progress Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>