News UAT/force-app/main/default/objects/Creative__c/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <formula>Product_Order__r.Proposed_Start_Date__c</formula>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>