News UAT/force-app/main/default/objects/Creative__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Creative Ready On</label>
    <type>Date</type>
</CustomField>